fix spacing

--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -160,7 +160,7 @@
 
 .content-section {
   overflow: hidden;
-  margin: 0 0 3rem;
+  margin: 0 0 1.5rem;
 
   .resume-item { margin-bottom: 2rem; }
 
